# serializer version: 1
# name: TestSessionsV3QueriesHogQLToClickhouse.test_join_with_events[new_events_schema]
  '''
  SELECT
      sessions.session_id AS session_id,
      uniq(events.uuid) AS uniq_uuid
  FROM
      events_json AS events
      JOIN (SELECT
          toString(reinterpretAsUUID(bitOr(bitShiftLeft(raw_sessions_v3.session_id_v7, 64), bitShiftRight(raw_sessions_v3.session_id_v7, 64)))) AS session_id,
          raw_sessions_v3.session_id_v7 AS session_id_v7
      FROM
          raw_sessions_v3
      WHERE
          and(equals(raw_sessions_v3.team_id, <TEAM_ID>), greaterOrEquals(raw_sessions_v3.session_timestamp, minus(%(hogql_val_0)s, toIntervalDay(3))))
      GROUP BY
          raw_sessions_v3.session_id_v7) AS sessions ON equals(events.properties.`$session_id`, sessions.session_id)
  WHERE
      and(equals(events.team_id, <TEAM_ID>), greater(events.timestamp, toDateTime64(%(hogql_val_1)s, 6, %(hogql_val_2)s)))
  GROUP BY
      sessions.session_id
  LIMIT 50000
  '''
# ---
# name: TestSessionsV3QueriesHogQLToClickhouse.test_session_breakdown[new_events_schema]
  '''
  SELECT
      count(DISTINCT e.properties.`$session_id`) AS total,
      toStartOfDay(toTimeZone(e.timestamp, %(hogql_val_7)s)) AS day_start,
      multiIf(and(greaterOrEquals(e__session.`$session_duration`, 2.0), less(e__session.`$session_duration`, 4.5)), %(hogql_val_8)s, and(greaterOrEquals(e__session.`$session_duration`, 4.5), less(e__session.`$session_duration`, 27.0)), %(hogql_val_9)s, and(greaterOrEquals(e__session.`$session_duration`, 27.0), less(e__session.`$session_duration`, 44.0)), %(hogql_val_10)s, and(greaterOrEquals(e__session.`$session_duration`, 44.0), less(e__session.`$session_duration`, 48.0)), %(hogql_val_11)s, and(greaterOrEquals(e__session.`$session_duration`, 48.0), less(e__session.`$session_duration`, 57.5)), %(hogql_val_12)s, and(greaterOrEquals(e__session.`$session_duration`, 57.5), less(e__session.`$session_duration`, 61.0)), %(hogql_val_13)s, and(greaterOrEquals(e__session.`$session_duration`, 61.0), less(e__session.`$session_duration`, 74.0)), %(hogql_val_14)s, and(greaterOrEquals(e__session.`$session_duration`, 74.0), less(e__session.`$session_duration`, 90.0)), %(hogql_val_15)s, and(greaterOrEquals(e__session.`$session_duration`, 90.0), less(e__session.`$session_duration`, 98.5)), %(hogql_val_16)s, and(greaterOrEquals(e__session.`$session_duration`, 98.5), less(e__session.`$session_duration`, 167.01)), %(hogql_val_17)s, %(hogql_val_18)s) AS breakdown_value
  FROM
      events_json AS e
      LEFT OUTER JOIN (SELECT
          argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
          person_distinct_id_overrides.distinct_id AS distinct_id
      FROM
          person_distinct_id_overrides
      WHERE
          equals(person_distinct_id_overrides.team_id, <TEAM_ID>)
      GROUP BY
          person_distinct_id_overrides.distinct_id
      HAVING
          equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0)
      SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
      LEFT JOIN (SELECT
          dateDiff(%(hogql_val_0)s, min(toTimeZone(raw_sessions_v3.min_timestamp, %(hogql_val_1)s)), max(toTimeZone(raw_sessions_v3.max_timestamp, %(hogql_val_2)s))) AS `$session_duration`,
          raw_sessions_v3.session_id_v7 AS session_id_v7
      FROM
          raw_sessions_v3
      WHERE
          and(equals(raw_sessions_v3.team_id, <TEAM_ID>), greaterOrEquals(raw_sessions_v3.session_timestamp, minus(toStartOfDay(assumeNotNull(toDateTime(%(hogql_val_3)s, %(hogql_val_4)s))), toIntervalDay(3))), lessOrEquals(raw_sessions_v3.session_timestamp, plus(assumeNotNull(toDateTime(%(hogql_val_5)s, %(hogql_val_6)s)), toIntervalDay(3))))
      GROUP BY
          raw_sessions_v3.session_id_v7) AS e__session ON equals(toUInt128(toUUIDOrNull(e.properties.`$session_id`)), e__session.session_id_v7)
  WHERE
      and(equals(e.team_id, <TEAM_ID>), and(greaterOrEquals(toTimeZone(e.timestamp, %(hogql_val_19)s), toStartOfDay(assumeNotNull(toDateTime(%(hogql_val_20)s, %(hogql_val_21)s)))), lessOrEquals(toTimeZone(e.timestamp, %(hogql_val_22)s), assumeNotNull(toDateTime(%(hogql_val_23)s, %(hogql_val_24)s))), equals(e.event, %(hogql_val_25)s), in(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), (SELECT
                      cohortpeople.person_id AS person_id
                  FROM
                      cohortpeople
                  WHERE
                      and(equals(cohortpeople.team_id, <TEAM_ID>), and(equals(cohortpeople.cohort_id, 2), equals(cohortpeople.version, 0)))))))
  GROUP BY
      day_start,
      breakdown_value
  LIMIT 50000
  '''
# ---
# name: TestSessionsV3QueriesHogQLToClickhouse.test_union[new_events_schema]
  '''
  SELECT
      0 AS duration
  LIMIT 50000
  UNION ALL
  SELECT
      events__session.`$session_duration` AS duration
  FROM
      (SELECT
          toUInt128(toUUIDOrNull(events.properties.`$session_id`)) AS `$session_id_uuid`
      FROM
          events_json AS events
      WHERE
          and(equals(events.team_id, <TEAM_ID>), less(events.timestamp, today()))
      LIMIT 50000) AS events
      LEFT JOIN (SELECT
          dateDiff(%(hogql_val_0)s, min(toTimeZone(raw_sessions_v3.min_timestamp, %(hogql_val_1)s)), max(toTimeZone(raw_sessions_v3.max_timestamp, %(hogql_val_2)s))) AS `$session_duration`,
          raw_sessions_v3.session_id_v7 AS session_id_v7
      FROM
          raw_sessions_v3
      WHERE
          and(equals(raw_sessions_v3.team_id, <TEAM_ID>), lessOrEquals(raw_sessions_v3.session_timestamp, plus(today(), toIntervalDay(3))))
      GROUP BY
          raw_sessions_v3.session_id_v7) AS events__session ON equals(events.`$session_id_uuid`, events__session.session_id_v7)
  LIMIT 50000
  '''
# ---
